MobileNavbar alignment fix

--- a/src/components/NavbarMobile/NavbarMobile.css
+++ b/src/components/NavbarMobile/NavbarMobile.css
@@ -17,7 +17,7 @@
 .navbar-mobile ul.navbar-mobile-links {
 	display: flex;
 	align-items: center;
-	justify-content: space-evenly;
+	justify-content: space-around;
 	list-style: none;
 }
 
